[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Enemies/TentaclePlant/TentaclePlant.gd" type="Script" id=2]
[ext_resource path="res://scenes/Enemies/TentaclePlant/tentaplant_fire.png" type="Texture" id=3]
[ext_resource path="res://scenes/Enemies/TentaclePlant/tentaplant_idle.png" type="Texture" id=4]
[ext_resource path="res://resources/shaders/enemy_hurt.shader" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/color = Color( 0.745098, 0.14902, 0.2, 1 )
shader_param/active = false

[sub_resource type="Animation" id=2]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fire"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 16 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 13 ) ]
}

[node name="TentaclePlant" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
material = SubResource( 1 )
position = Vector2( 0, 16 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" parent="." index="1"]
autoplay = "idle"
anims/fire = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox" index="0"]
polygon = PoolVector2Array( -8, 1, 0, 0, 7, 1, 15, 8, 14, 16, 8, 23, -8, 23, -14, 16, -15, 8 )

[node name="BulletPosition" parent="." index="5"]
position = Vector2( 0, 26 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="6"]
polygon = PoolVector2Array( -14, 11, -6, 2, 6, 2, 14, 11, 8, 21, -8, 21 )

[node name="BulletTimer" type="Timer" parent="." index="7"]
wait_time = 0.3

[node name="EndAlertTimer" type="Timer" parent="." index="8"]
wait_time = 10.0

[node name="DetectionArea" type="Area2D" parent="." index="9"]
collision_layer = 0
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DetectionArea" index="0"]
polygon = PoolVector2Array( 8, 0, 96, 128, -96, 128, -8, 0 )

[node name="VisibilityNotifier2D" parent="." index="10"]
position = Vector2( 0, 12 )
scale = Vector2( 1.6, 1.2 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
[connection signal="timeout" from="EndAlertTimer" to="." method="_on_EndAlertTimer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
